more mb workflow eom tool

--- a/1/EomTool/EomApp1/Screens/MediaBuyerWorkflow/MediaBuyerEmailTemplate.tt
+++ b/1/EomTool/EomApp1/Screens/MediaBuyerWorkflow/MediaBuyerEmailTemplate.tt
@@ -1,11 +1,8 @@
 ﻿<#@ template language="C#" #>
-<# 
-var x = (MediaBuyerEmail)this;
-#>
-<p>Hello <#=x.MediaBuyerName#>,<br/>
+<p>Hello <#=MediaBuyerName#>,<br/>
 <br/>
 You have pending publisher report approvals.<br/>
 <br/>
-Please click <a href="#">here</a> to open them.<br/>
+Please click <a href="<#=UrlToOpen#>">here</a> to open them.<br/>
 <br/>
 Thank You.</p>
