--- a/1/EomTool/EomToolWeb/Views/Payouts/PayoutsGrid.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/PayoutsGrid.cshtml
@@ -1,5 +1,6 @@
 ﻿@model PayoutsListViewModel
-<table border="0" cellpadding="0" cellspacing="0">
+@Styles.Render("~/PubRep/css")
+<table style="border: 1px solid black; font-size: small">
     <tr>
         <td>
             @Model.PublisherReport
