--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+    <title>@ViewBag.Title</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
@@ -11,38 +11,28 @@
 </head>
 <body>
     <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    @*<p class="site-title"></p>*@
-                    <img src="@Url.Content("~/dalogo2.png")" alt="" />
-                    <section id="login">
+        <div class="content-wrapper">
+            <div class="float-right">
+                <section id="login">
                         Hello, <span class="username">@User.Identity.Name</span>!
                     </section>
-                </div>
-@*                <div class="float-right">       
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
-                </div>*@
             </div>
-        </header>
+        </div>
+    </header>
     <div id="body">
         @RenderSection("featured", required: false)
         <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
+            @RenderBody()
+        </section>
     </div>
     <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - Direct Agents</p>
-                </div>
+        <div class="content-wrapper">
+            <div class="float-left">
+                <p>
+                    &copy; @DateTime.Now.Year - Direct Agents</p>
             </div>
-        </footer>
+        </div>
+    </footer>
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </body>
