--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
 </head>
 <body>
     <header>
@@ -34,6 +33,7 @@
         </div>
     </footer>
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
