dummy notes dialog

--- a/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
@@ -16,6 +16,17 @@
 
 <div id="pubDetails">
 </div>
+
+<div id="dialog-form" title="Add Notes">
+    Enter Notes:
+    <form>
+        <input id="dlgAffId" type="hidden" value="" />
+        <input id="dlgAction" type="hidden" value="" />
+        <input type="text" />
+    </form>
+</div>
+
+@section scripts {
 <script type="text/javascript">
     function ShowDetails(affid) {
         $.get('@Url.Action("Details", new { mode = Model.Mode })?affid=' + affid, function (data) {
@@ -25,13 +36,43 @@
         });
     }
     function ApprovePub(affid) {
-        $.get('@Url.Action("Approve", "Publishers")?affid=' + affid, function (data) {
-            $('#tdPubActions' + affid).html('(approved)');
-        });
+        $('#dlgAction').val("Approve");
+        $('#dlgAffId').val(affid);
+        $('#dialog-form').dialog("open");
     }
     function HoldPub(affid) {
-        $.get('@Url.Action("Hold", "Publishers")?affid=' + affid, function (data) {
-            $('#tdPubActions' + affid).html('(held)');
-        });
+        $('#dlgAction').val("Hold");
+        $('#dlgAffId').val(affid);
+        $('#dialog-form').dialog("open");
     }
+
+    $(function () {
+        $("#dialog-form").dialog({
+            autoOpen: false,
+            height: 300,
+            width: 350,
+            modal: true,
+            buttons: {
+                "OK": function () {
+                    var affid = $('#dlgAffId').val();
+                    var url;
+                    if ($('#dlgAction').val() == "Approve")
+                        url = '@Url.Action("Approve", "Publishers")';
+                    else
+                        url = '@Url.Action("Hold", "Publishers")';
+                    $.get(url + '?affid=' + affid, function (data) {
+                        $('#tdPubActions' + affid).html(data);
+                        $('#dialog-form').dialog("close");
+                    });
+                },
+                Cancel: function () {
+                    $(this).dialog("close");
+                }
+            },
+            close: function () {
+                //allFields.val("").removeClass("ui-state-error");
+            }
+        });
+    });
 </script>
+}
