--- a/1/EomTool/EomToolWeb/Content/PubRep.css
+++ b/1/EomTool/EomToolWeb/Content/PubRep.css
@@ -1,5 +1,4 @@
-﻿h2 {border-width: thin; border-style: solid; text-align: center;}
-#outer {width: 700px; margin: 0px auto;}
+﻿#outer {width: 700px; margin: 0px auto;}
 #title {font-weight: bold; background-color:#ffffff; border-width: thin; border-style: none; text-align: center}
 #title1 {font-size: 200%; font-style: italic; color: #000000}
 #title2 {font-size: 200%; color: #000000}
