--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout.cshtml
@@ -11,9 +11,9 @@
 <body>
     <header>
         <div class="content-wrapper">
-            <div class="float-right">
+            <div class="float-left">
                 <section id="login">
-                        Hello, <span class="username">@User.Identity.Name</span>!
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hello, <span class="username">@User.Identity.Name</span>!
                     </section>
             </div>
         </div>
