--- a/1/EomTool/EomToolWeb/Content/Site.css
+++ b/1/EomTool/EomToolWeb/Content/Site.css
@@ -716,12 +716,10 @@ tr.highlighted
     background-color: #CCCCFF;
 }
 
-.lineitems {font-size: 100%; border: 1px solid black; border-collapse:collapse; clear: both}
-.lineitems2 {border: 1px solid black; padding:1px; width: 387px}
-.lineitems3 {border: 1px solid black; padding:1px; width: 100px; text-align: center}
-.lineitems4 {border: 1px solid black; padding:1px; width: 100px; text-align: center}
-.lineitems5 {border: 1px solid black; padding:1px; width: 100px; text-align: center}
-.lineitems6 {border: 1px solid black; padding:1px; width: 100px; text-align: center; background-color:#cccccc}
+.cell-title
+{
+    font-weight: bold;
+}
 
 /********************
 *   Mobile Styles   *
@@ -730,7 +728,7 @@ tr.highlighted
 {
 
     /* header
-        ----------------------------------------------------------*/
+            ----------------------------------------------------------*/
     header .float-left, header .float-right
     {
         float: none;
@@ -800,7 +798,7 @@ tr.highlighted
 
 
     /* main layout
-        ----------------------------------------------------------*/
+            ----------------------------------------------------------*/
     .main-content, .featured + .main-content
     {
         background-position: 10px 0;
@@ -887,7 +885,7 @@ tr.highlighted
 
 
     /* footer
-        ----------------------------------------------------------*/
+            ----------------------------------------------------------*/
     footer .float-left, footer .float-right
     {
         float: none;
