--- a/1/EomTool/EomToolWeb/Views/Payouts/Details.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/Details.cshtml
@@ -1,15 +1,8 @@
 ﻿@model PayoutsListViewModel
 @Styles.Render("~/PubRep/css")
-
-<table style="border: 1px solid black; font-size: small">
-    <tr>
-        <td>
-            @Model.PublisherReport
-        </td>
-    </tr>
-    <tr>
-        <td>
-            @Html.Partial("PayoutsGrid", Model)
-        </td>
-    </tr>
-</table>
+<br />
+@Html.Partial("PayoutsGrid", Model)
+<br />
+<div style="border: 0px solid black">
+    @Model.PublisherReport
+</div>
