--- a/1/EomTool/EomToolWeb/Views/Payouts/PayoutsGrid.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/PayoutsGrid.cshtml
@@ -1,91 +1,46 @@
 ﻿@model PayoutsListViewModel
-
-<table>
-    <tr>
-        <th>Publisher</th>
-        <th>Campaign</th>
-        <th>Cost<br />Curr</th>
-        <th>Payout</th>
-        <th>Actions</th>
-        <th>%Margin</th>
-        <th>Payment<br />Term</th>
-        <th>Pay<br />Curr</th>
-        <th>Payout</th>
-        <th>Status</th>
-        <th>Accting<br />Status</th>
-        <th>Approval</th>
-        @if (Model.ShowActions)
-        {
-            <th></th>
-        }
-        @if (Model.TestMode)
-        {
-            <th>affid</th>
-            <th>pid</th>
-            <th>ItemIds</th>
-        }
-    </tr>
-    @foreach (var payout in Model.Payouts)
-    {
-        <tr>
-            <td>@payout.Publisher
-            </td>
-            <td>@payout.Campaign_Name
-            </td>
-            <td>@payout.Cost_Currency
-            </td>
-            <td>@String.Format("{0:N2}", payout.Cost_Unit)
-            </td>
-            <td>@String.Format("{0:N2}", payout.Units)
-            </td>
-            <td>@String.Format("{0:N2}", payout.MarginPct)
-            </td>
-            <td>@payout.Net_Terms
-            </td>
-            <td>@payout.Pub_Pay_Curr
-            </td>
-            <td>@String.Format("{0:N2}", payout.Pub_Payout)
-            </td>
-            <td>@payout.Status
-            </td>
-            <td>@payout.Accounting_Status
-            </td>
-            <td>@payout.Media_Buyer_Approval_Status
-            </td>
-            @if (Model.ShowActions)
-            {
-                <td id="tdCampActions@(payout.pid)">
-                    @if (payout.media_buyer_approval_status_id != MediaBuyerApprovalStatus.Approved)
-                    {
-                        @Ajax.ActionLink("Approve", "Approve", new { itemids = payout.ItemIds },
-                            new AjaxOptions {
-                                Url = Url.Action("Approve", new { itemids = payout.ItemIds }),
-                                UpdateTargetId = "tdCampActions" + payout.pid
-                            });
-                    }
-                    @if (payout.media_buyer_approval_status_id != MediaBuyerApprovalStatus.Hold)
-                    {
-                        @Ajax.ActionLink("Hold", "Hold", new { itemids = payout.ItemIds },
-                            new AjaxOptions {
-                                Url = Url.Action("Hold", new { itemids = payout.ItemIds }),
-                                UpdateTargetId = "tdCampActions" + payout.pid
-                            });
-                    }
-                </td>
-            }
-            @if (Model.TestMode)
-            {
-                <td>@payout.affid
-                </td>
-                <td>@payout.pid
-                </td>
-                <td>@payout.ItemIds
-                </td>
-            }
-        </tr>
-    }
-</table>
-<br />
-<div class="pager">
-    @Html.PageLinks(Model.PagingInfo, x => Url.Action("List", new { page = x }))
+<style type="text/css">
+.active
+{
+    background-color: Gray;
+}
+</style>
+<div id="payoutGrid" style="height: 300px; border: 1px solid black">
 </div>
+<script type="text/javascript">
+    var columns = [
+             //{ id: "publisher", name: "Publisher", field: "Publisher", width: 200 }
+             { id: "campaign", name: "Campaign", field: "Campaign_Name", width: 300, cssClass: "cell-title", sortable: true }
+            ,{ id: "costperunit", name: "Cost/Unit", field: "Cost_Unit", width: 120, sortable: true }
+            ,{ id: "units", name: "Units", field: "Units", width: 120, sortable: true }
+            ,{ id: "pctmargin", name: "%Margin", field: "MarginPct", width: 120, sortable: true }
+            ,{ id: "netterms", name: "Terms", field: "Net_Terms", width: 120, sortable: true }
+            ,{ id: "paycurr", name: "Pay Curr", field: "Pub_Pay_Curr", width: 120, sortable: true }
+            ,{ id: "pubpayout", name: "Payout", field: "Pub_Payout", width: 120, sortable: true }
+            ,{ id: "cmpnstatus", name: "Campn Status", field: "Status", width: 120, sortable: true }
+            ,{ id: "acctgstatus", name: "Acctng Status", field: "Accounting_Status", width: 120, sortable: true }
+            ,{ id: "approval", name: "Approval", field: "Media_Buyer_Approval_Status", width: 120, sortable: true }
+        ];
+    var options = {
+        enableCellNavigation: true,
+        enableColumnReorder: false,
+        autoHeight: false,
+        enableTextSelectionOnCells: true
+    };
+    var data = @Html.Raw(Json.Encode(Model.Payouts));
+    var grid = new Slick.Grid("#payoutGrid", data, columns, options);
+    grid.onSort.subscribe(function(e, args){ // args: sort information. 
+        var field = args.sortCol.field;
+        data.sort(function(a, b){
+            var result = 
+                a[field] > b[field] ? 1 :
+                a[field] < b[field] ? -1 :
+                0
+            ; 
+            return args.sortAsc ? result : -result;
+        });
+        grid.setData(data);
+        grid.updateRowCount();
+        grid.render();         
+    });
+</script>
