--- a/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/Summary.cshtml
@@ -19,7 +19,7 @@
     <form id="frmNotes">
     <input id="dlgAffId" type="hidden" name="affid" value="" />
     <input id="dlgAction" type="hidden" value="" />
-    <textarea style="width:315px;height:135px" id="dlgNotes" name="notes"></textarea>
+    <textarea style="width:315px;height:135px" name="note"></textarea>
     </form>
 </div>
 @section scripts {
