--- a/1/EomTool/EomToolWeb/Views/Payouts/SummaryGrid.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Payouts/SummaryGrid.cshtml
@@ -14,6 +14,8 @@
             </td>
             <td>@String.Format("{0:N2}%", ps.MinPctMargin) - @String.Format("{0:N2}", ps.MaxPctMargin)%
             </td>
+            <td><a href="#" onclick="ShowNotes(@ps.BatchIds); return false;">Notes</a>
+            </td>
             @if (Model.ShowActions)
             {
                 <td id="tdPubActions@(ps.affid)">
